Fix #2043 Keyframe molang inputs with many lines overlap

--- a/css/panels.css
+++ b/css/panels.css
@@ -927,6 +927,11 @@
 		margin-top: 11px;
 		opacity: 0.5;
 	}
+	.keyframe_data_point {
+		display: flex;
+		flex-direction: column;
+		max-height: 250px;
+	}
 	#panel_keyframe .bar.flex {
 		height: auto;
 		min-height: 30px;
